# bi_ui

./: .gitignore  README.md  auth.py  conftest.py  gen_big_data_v2.py  llm_engine.py  main.py  pyproject.toml
api/: server.py
core/: agent.py  ai.py  context.py  engine.py  knowledge_base.py
new_requirements/: app_requirements.md
pages/: 02_🤖_AI_Assistant.py  03_📡_n8n_Chat_Mode.py  _01_📊_Dashboard.py  _99_⚙️_Data_Admin.py
tests/: test_ai_core.py  test_coverage_report.md  test_engine_core.py  test_integration_flow.py  test_parser_robustness.py  test_skeleton.py
